# EffectiveMobile-

./: README.md  pyproject.toml
EffectiveMobile/auth_service/auth_service/: settings.py  urls.py
auth_service/admins/: urls.py  views.py
auth_service/auth_service/: db_config.py  middlewares.py  settings.py  urls.py
auth_service/users/: models.py  serializers.py  urls.py  views.py
auth_service/users/migrations/: 0001_initial.py  0002_user_is_active.py  0003_role_alter_user_email_rolepermission_usertoken.py  0003_role_alter_user_email_user_role_id_rolepermission_and_more.py  0004_auto_20260416_2006.py  0005_user_role_id.py  0006_resource_remove_rolepermission_resourse_and_more.py  0007_alter_rolepermission_resourse_id.py  0008_rename_resourse_id_rolepermission_resourсe_and_more.py  0009_auto_20260419_1112.py  0010_auto_20260419_1149.py  0011_rename_resourсe_userpermission_resource_and_more.py  0012_auto_20260419_1413.py  0013_auto_20260419_1422.py  0014_auto_20260419_1424.py  0015_rename_resourсe_rolepermission_resource_and_more.py
